--- a/labs/index.html
+++ b/labs/index.html
@@ -35,6 +35,7 @@
       <section>
         
 <h2>Hands-On Labs</h2>
+<p>Labs are free unless marked otherwise</p>
 
 <table>
   <thead>
@@ -53,13 +54,13 @@
     <tr>
       <td><strong>Beginner</strong></td>
       <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/15683?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872374" target="_new">Amazon S3</a> (Free)<br />
-        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab"><code>boto3</code> SDK</a> (Free) <br />
-        <img src="../images/lab.png" /> <a href="microservices.html">Docker 101</a> (Free) <br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/15683?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872374" target="_new">Amazon S3</a> <br />
+        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab"><code>boto3</code> SDK</a>  <br />
+        <img src="../images/lab.png" /> <a href="microservices.html">Docker 101</a>  <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743655" target="_new">Google Storage</a> (1 credit)<br />
         <img src="../images/lab.png" /> <a href="https://training.play-with-docker.com/alacart/" target="_new">Docker Classroom</a> (Free, pick 2)<br />
-        <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (Free) <br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14177?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872435" target="_new">Intro to AWS Redshift</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a>  <br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14177?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872435" target="_new">Intro to AWS Redshift</a> <br />
         <img src="../images/lab.png" /> GitHub API <br />
       </td>
     </tr>
@@ -68,25 +69,25 @@
       <td>
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12363?catalog_rank=%7B%22rank%22%3A8%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8908142" target="_new">Batch Pipelines in GCP</a> (5 credits)<br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15605?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646302" target="_new">AWS Relational Database Service</a> (1 credit)<br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">GCP BigQuery</a> (Free) <br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Create an RDS Instance</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">GCP BigQuery</a>  <br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/create-mysql-db/" target="_new">Create an RDS Instance</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker</a> (Free, pick any) <br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> (Free)<br /> 
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> 
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/14124?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733391" target="_new">AWS Redshift</a> (10 credits)<br />
-        <img src="../images/lab.png" /> <a href="hhttps://amazon.qwiklabs.com/focuses/15682?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872412" target="_new">AWS Lambda</a> (Free)<br />
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14815?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872424" target="_new">Intro to AWS DynamoDB</a> (Free) <br />
+        <img src="../images/lab.png" /> <a href="hhttps://amazon.qwiklabs.com/focuses/15682?catalog_rank=%7B%22rank%22%3A4%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872412" target="_new">AWS Lambda</a> <br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14815?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872424" target="_new">Intro to AWS DynamoDB</a>  <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> (8 credits)<br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12762?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744166" target="_new">Serverless + Event-driven</a> (10 credits)<br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8872415" target="_new">CRUD using DynamoDB</a> (10 credits)<br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a><br />
-        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> <br />
       </td>
     </tr>
     <tr>
       <td><strong>Advanced</strong></td>
       <td>
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> (Free)<br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/automatically-deploy-a-serverless-rest-api-from-github-with-aws-chalice/" target="_new">Automated API Deployments</a> (Free)<br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> <br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/automatically-deploy-a-serverless-rest-api-from-github-with-aws-chalice/" target="_new">Automated API Deployments</a> <br />
         <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> (TBD)<br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/14265?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8733409" target="_new">AWS Elasticache</a> (1 credit)<br />
         <img src="../images/lab.png" /> <a href="https://athena-in-action.workshop.aws/" target="_new">AWS Athena Intro</a> (Free, cost TBD) <br />
