--- a/schedule/index.html
+++ b/schedule/index.html
@@ -117,7 +117,7 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_new">Miguel Grinberg: Flask APIs</a> <br />
-        <img src="../images/lab.png" /> <a href="https://aws.github.io/chalice/tutorials/basicrestapi.html" target="_new">Basic REST API</a> (Beginner)<br />
+        <img src="../images/lab.png" /> <a href="https://github.com/ds3002/fastapi/blob/main/ASSIGNMENT.md" target="_new">Basic REST API</a> (Beginner)<br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/developer/deploying-aws-chalice-application-using-aws-cloud-development-kit/" target="_new">Chalice + CDK API Builds</a> (Advanced)<br />
       </td>
     </tr>
