--- a/schedule/index.html
+++ b/schedule/index.html
@@ -124,7 +124,7 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO LECTURE 3/9/2021</b><br />Containers: Building</td>
+      <td><b>NO DISCUSSION 3/11/2021</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=HMxDaM3-c1U&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-&index=7" target="_new">Docker Basics</a> <br />
