--- a/schedule/index.html
+++ b/schedule/index.html
@@ -149,8 +149,8 @@
       <td>Containers: Building & Deploying</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=7-7p6WuDtbs" target="_new">Containerizing ML</a> <br />
+        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/digging-into-data-science-tools-docker-bbb9f3579c87" target="_new">Docker for Data Science</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/aws/lightsail-containers-an-easy-way-to-run-your-containers-in-the-cloud/" target="_new">Publish a Container to Lightsail</a> <br />
       </td>
     </tr>
