--- a/schedule/index.html
+++ b/schedule/index.html
@@ -161,9 +161,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler I</a> <br />
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
+        <img src="../images/book.png" /> <a href="https://www.tutorialspoint.com/sql/sql_tutorial.pdf" target="_new">SQL Reference</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/16318?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=9315001" target="_new">AWS Relational Database Service</a>
       </td>
     </tr>
